2003-06-05  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.c: Only high-level stuff

	* src/modules/gnome.c: Moved gnome print frontend here

	* src/modules/ps.*: Moved plain print frontend here

2003-05-25  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-item.h: Removed ::menu and ::knot_holder virtual methods

	* src/object-edit.c: New file, collect all knotholder methods from
	item implementations here

	* src/object-edit.h (sp_item_knot_holder): New file

	* src/object-ui.c: New file, collect all Gtk related methods from
	object implementations here

	* src/object-ui.h (sp_object_menu): New file

2003-05-24  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.c (sp_print_preview_document): Use ::set_preview if present

	* src/module.h: Added virtual methof for setting preview

	* src/helper/kde.cpp (sp_module_print_kde_finish): Got working
	(sp_module_print_kde_set_preview): New method

2003-05-18  Hans Breuer  <hans.breuer.org>

	* src/monostd.h : (new file) some defines and includes
	mostly to make up the WIN32 lack of unistd.h

	* config.h.win32 src/makefile.msc src/*/makefile.msc :
	(new files) to build Sodipodi on win32 with M$ toolchain

	* src/winmain.c : (new file) WinMain in it's own file simply 
	calling main()
	* src/main.c : build the common main() for win32 too

	* src/sodipodi.rc : (new file) to compile in the application
	icon on win32

	* src/file.c : use G_DIR_SEPARATOR[_S] instead of '/' ["/"]
	make the file selection work better on win32

	* src/sp-image.c : read images defined by xlink:href="file://...

	* src/sodipodi.c : #inculed "monostd.h" to get S_ISDIR and 
	S_ISREG on win32

	* src/libnr/nr-values.h : when building as DLL exporting 
	variables is quite ugly. Define some constant matrices as
	static for win32 to avoid exporting.

	* src/libnrtype/nr-type-directory.c : #include <io.h> 
	for win32::open() etc.

	* src/libnrtype/nr-type-w32.c : #ifdef HANGUL_CHARSET,
	older SDK headers don't have it
